--- a/templates/parts/dialog-consequence-block.hbs
+++ b/templates/parts/dialog-consequence-block.hbs
@@ -3,12 +3,10 @@
 
     {{eLog "DialogConsequence.Block Context" this}}
     <div class="consequence-section consequence-section-{{rollPosition}} full-width">
-      <h1 class="consequence-header-{{rollPosition}}">{{case "title" rollPosition}} Position</h1>
 
-      <h2 class="consequence-subheader-{{rollPosition}}-partial">On Partial Success</h2>
+      <h2 class="consequence-subheader-{{rollPosition}}-{{rollResult}}">On {{case "title" rollResult}}</h2>
 
-      {{#with "partial" as |rollResult|}}
-      {{#each (lookup ../consequenceData rollResult) as |cData cID|}}
+      {{#each consequenceData as |cData cID|}}
         {{#if cData}}
         <div class="roll-consequence-row flex-vertical full-width" data-csq-id="{{cID}}">
           <div class="comp consequence-display-container roll-consequence-entry-row full-width flex-horizontal">
@@ -24,35 +22,35 @@
             {{> "systems/eunos-blades/templates/components/select.hbs"
               cssClass="roll-consequence-type-select"
               dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." ../../rollPosition "." rollResult "." cID ".type")
+              dataFlagTarget=(concat "rollCollab.consequenceData." ../rollPosition "." ../rollResult "." cID ".type")
               dataDType="String"
               dataDocType=false
               selected=cData.type
-              options=(lookup ../../consequenceTypeOptions rollResult)
+              options=../consequenceTypeOptions
             }}
             {{!-- Attribute --}}
             {{> "systems/eunos-blades/templates/components/select.hbs"
               cssClass="roll-consequence-attribute-select"
               dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." ../../rollPosition "." rollResult "." cID ".attribute")
+              dataFlagTarget=(concat "rollCollab.consequenceData." ../rollPosition "." ../rollResult "." cID ".attribute")
               dataDType="String"
               dataDocType=false
               selected=cData.attribute
-              options=../../consequenceAttributeOptions
+              options=../consequenceAttributeOptions
             }}
             {{!-- AI Trigger --}}
             {{> "systems/eunos-blades/templates/components/button-icon.hbs"
               blockClass="ai-query-button"
               buttonClass="fa-solid fa-brain-circuit"
               tooltip="<b>Query AI</b><br>Query OpenAI for suggestions on resisted versions of this consequence."
-              action=(concat "ai-query-" ../../rollPosition "-" rollResult "-" cID)
+              action=(concat "ai-query-" ../rollPosition "-" ../rollResult "-" cID)
             }}
             {{!-- Armor Toggles --}}
             {{#if (test cData.attribute "==" "prowess")}}
               {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                 isToggled=cData.canArmorA
                 blockClass="armor-toggle armor-toggle-a"
-                targetFlagKey=(concat "rollCollab.consequenceData." ../../rollPosition "." rollResult "." cID ".canArmorA")
+                targetFlagKey=(concat "rollCollab.consequenceData." ../rollPosition "." ../rollResult "." cID ".canArmorA")
                 activeClass="fa-sharp fa-solid fa-shield"
                 inactiveClass="fa-sharp fa-regular fa-shield"
               }}
@@ -60,17 +58,17 @@
                 {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                   isToggled=cData.canArmorB
                   blockClass="armor-toggle armor-toggle-b"
-                  targetFlagKey=(concat "rollCollab.consequenceData." ../../rollPosition "." rollResult "." cID ".canArmorB")
+                  targetFlagKey=(concat "rollCollab.consequenceData." ../rollPosition "." ../rollResult "." cID ".canArmorB")
                   activeClass="fa-sharp fa-solid fa-shield"
                   inactiveClass="fa-sharp fa-regular fa-shield"
                 }}
               {{/if}}
             {{/if}}
             {{!-- Name --}}
-            <input class="shadowed consequence-name" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../../rollPosition}}.{{rollResult}}.{{cID}}.name" />
+            <input class="shadowed consequence-name" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../rollPosition}}.{{../rollResult}}.{{cID}}.name" />
           </div>
           {{!-- AI Options --}}
-          <div class="flex-vertical consequence-resist-options-container">
+          <div class="flex-vertical consequence-resist-options-container full-width">
             {{#each cData.resistOptions as |rData rID|}}
             <div class="flex-horizontal consequence-resist-option" data-csq-id="{{rID}}">
               {{!-- Select Resist Option --}}
@@ -79,113 +77,31 @@
                   blockClass="resist-select-button"
                   buttonClass="fa-solid fa-star gold-bright"
                   tooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
-                  action=(concat "gm-select-toggle-" ../../../rollPosition "-" rollResult "-" cID "-" rID)
+                  action=(concat "gm-select-toggle-" ../../rollPosition "-" ../../rollResult "-" cID "-" rID)
                 }}
               {{else}}
                 {{> "systems/eunos-blades/templates/components/button-icon.hbs"
                   blockClass="resist-select-button"
                   buttonClass="fa-regular fa-star grey"
                   tooltip="<b>AI Suggestion</b><br>Click to Select."
-                  action=(concat "gm-select-toggle-" ../../../rollPosition "-" rollResult "-" cID "-" rID)
+                  action=(concat "gm-select-toggle-" ../../rollPosition "-" ../../rollResult "-" cID "-" rID)
                 }}
               {{/if}}
               {{!-- Type --}}
               {{> "systems/eunos-blades/templates/components/select.hbs"
                 cssClass="roll-consequence-type-select"
                 dataAction="gm-select"
-                dataFlagTarget=(concat "rollCollab.consequenceData." ../../../rollPosition "." rollResult "." cID ".resistOptions." rID ".type")
+                dataFlagTarget=(concat "rollCollab.consequenceData." ../../rollPosition "." ../../rollResult "." cID ".resistOptions." rID ".type")
                 dataDType="String"
                 dataDocType=false
                 selected=rData.type
-                options=../../../consequenceTypeOptionsAll }}
+                options=../../consequenceTypeOptionsAll }}
               {{!-- Name --}}
-              <input class="shadowed consequence-name" type="text" value="{{rData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../../../rollPosition}}.{{rollResult}}.{{cID}}.resistOptions.{{rID}}.name" />
+              <input class="shadowed consequence-name" type="text" value="{{rData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{../../rollPosition}}.{{../../rollResult}}.{{cID}}.resistOptions.{{rID}}.name" />
             </div>
             {{/each}}
           </div>
         </div>
         {{/if}}
       {{/each}}
-      {{/with}}
-
-      <h2 class="consequence-subheader-{{rollPosition}}-fail">On Failure</h2>
-      {{#with "fail" as |rollResult|}}
-      {{#each (lookup csqData rollResult) as |cData cID|}}
-        {{#if cData}}
-        <div class="roll-consequence-row flex-vertical full-width" data-csq-id="{{cID}}">
-          <div class="comp consequence-display-container roll-consequence-entry-row full-width flex-horizontal">
-            {{!-- Icon --}}
-            <div class="consequence-icon-container" style="position: relative;">
-              <div class="consequence-icon-circle">
-              {{{compileSvg cData.type cData.icon}}}
-              </div>
-            </div>
-            {{!-- Type --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-type-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollPosition "." rollResult "." cID ".type")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.type
-              options=(lookup csqTypeOptions rollResult)
-            }}
-            {{!-- Attribute --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-attribute-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollPosition "." rollResult "." cID ".attribute")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.attribute
-              options=../../consequenceA
-            }}
-            {{!-- AI Trigger --}}
-            {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-              blockClass="ai-query-button"
-              buttonClass="fa-solid fa-brain-circuit"
-              tooltip="<b>Query AI</b><br>Query OpenAI for suggestions on resisted versions of this consequence."
-              action=(concat "ai-query-" rollPosition "-" rollResult "-" cID)
-            }}
-            {{!-- Name --}}
-            <input class="shadowed consequence-name" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollPosition}}.{{rollResult}}.{{cID}}.name" />
-          </div>
-          {{!-- AI Options --}}
-          <div class="flex-vertical consequence-resist-options-container">
-            {{#each cData.resistOptions as |rData rID|}}
-            <div class="flex-horizontal consequence-resist-option" data-rcsq-id="{{rID}}">
-              {{!-- Select Resist Option --}}
-              {{#if rData.isSelected}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-solid fa-star gold-bright"
-                  tooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
-                  action=(concat "gm-select-toggle-" rollPosition "-" rollResult "-" cID "-" rID)
-                }}
-              {{else}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-regular fa-star grey"
-                  tooltip="<b>AI Suggestion</b><br>Click to Select."
-                  action=(concat "gm-select-toggle-" rollPosition "-" rollResult "-" cID "-" rID)
-                }}
-              {{/if}}
-              {{!-- Type --}}
-              {{> "systems/eunos-blades/templates/components/select.hbs"
-                cssClass="roll-consequence-type-select"
-                dataAction="gm-select"
-                dataFlagTarget=(concat "rollCollab.consequenceData." rollPosition "." rollResult "." cID ".resistOptions." rID ".type")
-                dataDType="String"
-                dataDocType=false
-                selected=rData.type
-                options=csqTypeOptionsAll }}
-              {{!-- Name --}}
-              <input class="shadowed consequence-name" type="text" value="{{rData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollPosition}}.{{rollResult}}.{{cID}}.resistOptions.{{rID}}.name" />
-            </div>
-            {{/each}}
-          </div>
-        </div>
-        {{/if}}
-      {{/each}}
-      {{/with}}
     </div>
