--- a/scss/components/_comps.scss
+++ b/scss/components/_comps.scss
@@ -968,8 +968,8 @@
     max-width: var(--container-height); // calc(var(--container-height) * 0.75);
     background: transparent;
     left: var(--container-left-shift);
-    z-index: 1;
     pointer-events: auto;
+    z-index: 2;
     transition: 0.2s;
 
     &:hover {
@@ -1045,6 +1045,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
+      pointer-events: none !important;
       bottom: 0px;
 
       .consequence-button-bg {
@@ -1079,6 +1080,7 @@
           // 0px 0px 1px var(--blades-black-dark),
           // 0px 0px 0.5px var(--blades-black-dark),
           0px 0px 1px var(--blades-black-dark);
+        pointer-events: none !important;
         letter-spacing: 1;
         // color: var(--blades-black-dark);
         text-transform: uppercase;
@@ -1087,6 +1089,7 @@
       }
       .button-icon {
         position: unset;
+        pointer-events: none !important;
         height: 14px;
         width: 14px;
 
@@ -1121,6 +1124,24 @@
         bottom: 12px;
       }
     }
+  }
+
+  .consequence-blocker {
+    height: 100%;
+    background: var(--blades-black-dark);
+    transform-origin: 0% 50%;
+    // background: linear-gradient(to left, cyan 49%, lime 49%, lime 51%, cyan 51%);
+    // opacity: 0.5 !important;
+    opacity: 0;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    // transform: translate(0%, -50%);
+    // top: 50%;
+    left: calc(0.5 * var(--container-height) + 5px);
+    // display: none;
   }
 
   .consequence-type-container {
