--- a/templates/chat/roll-result-action-roll.hbs
+++ b/templates/chat/roll-result-action-roll.hbs
@@ -42,10 +42,18 @@
   <div class="dice-roll-strip">{{{dieValsHTML}}}</div>
 
   {{!-- Position / Result / Effect --}}
-  <div class="roll-outcome-container roll-result-{{rollResult}} flex-horizontal full-width">
+  <div class="roll-outcome-container roll-result-{{rollResult}} roll-position-{{finalPosition}} roll-effect-{{finalEffect}} flex-horizontal full-width">
+
+    {{!-- Backgrounds --}}
+    <div class="roll-state-background-container">
+      <div class="roll-state-background roll-position-background"></div>
+    {{#unless (test rollResult "==" "fail")}}
+      <div class="roll-state-background roll-effect-background"></div>
+    {{/unless}}
+    </div>
 
     {{!-- Position --}}
-    <div class="roll-state-container flex-vertical">
+    <div class="roll-state-container roll-state-container-left flex-vertical">
       <h3 class="roll-state roll-state-position roll-state-position-{{finalPosition}}">{{case "title" finalPosition}}</h3>
       <h4 class="roll-state-label">Position</h4>
     </div>
@@ -66,18 +74,20 @@
     </div>
 
     {{!-- Effect --}}
-    <div class="roll-state-container flex-vertical">
+    {{#unless (test rollResult "==" "fail")}}
+    <div class="roll-state-container roll-state-container-right flex-vertical">
+      <h4 class="roll-state-label">Effect<strong>:</strong></h4>
       <h3 class="roll-state roll-state-effect roll-state-effect-{{finalEffect}}">{{case "title" finalEffect}}</h3>
-      <h4 class="roll-state-label">Effect</h4>
     </div>
+    {{/unless}}
 
   </div>
 
+  {{#if (test (test rollResult "==" "fail") "||" (test rollResult "==" "partial"))}}
   {{!-- Consequences --}}
-  {{#if (test rollResult "==" "partial")}}
   <div class="consequence-container flex-vertical full-width">
-  {{#with (lookup flagData.consequenceData finalPosition) as |csqData|}}
-  {{#each csqData.partial as |cData cIndex|}}
+  {{#with (lookup (lookup flagData.consequenceData finalPosition) rollResult) as |csqData|}}
+  {{#each csqData as |cData cIndex|}}
     {{eLog "ConsequenceContainer" cIndex csqData cData}}
     {{#if cData.resistTo}}
     {{> "systems/eunos-blades/templates/components/consequence.hbs" cData
@@ -87,16 +97,5 @@
   {{/with}}
   </div>
   {{/if}}
-  {{#if (test rollResult "==" "fail")}}
-  <div class="consequence-container flex-vertical full-width">
-  {{#with (lookup flagData.consequenceData finalPosition) as |csqData|}}
-  {{#each csqData.fail as |cData cIndex|}}
-    {{#if cData.resistTo}}
-    {{> "systems/eunos-blades/templates/components/consequence.hbs" cData
-      flagData=../../flagData }}
-    {{/if}}
-  {{/each}}
-  {{/with}}
-  </div>
-  {{/if}}
+
 </div>
